<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cloudDataUploader"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <Button
        android:id="@+id/startCloudDataUploadButton"
        android:text="@string/Start_DataUpload"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/clearCloudDataUploadButton"
        android:text="@string/Clear_DataUpload"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/cancelCloudDataUploadButton"
        android:text="@string/Cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/cloudResultEditText"
        android:scrollbars = "vertical"
        android:hint="@string/Recognition_Results_Hint"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:gravity="top"/>
</LinearLayout>
